# Small-Code-Projects

./: .gitignore  PCB Mount Parametric.SLDPRT  test_all_headers_c11.cpp  test_user_project.cpp  ~$PCB Mount Parametric.SLDPRT
ESP32-Projects/ELEGOO Dev Kit Board/: platformio.ini
ESP32-Projects/RobotLib-Test-ESP32C3/: platformio.ini
RobotLib/: .clangd  .gitignore  CONTRIBUTING.md  EDITOR_SETUP.md  ESP32-C3_BUILD_REPORT.md  FEATURE_SUMMARY.md  FINAL_VERIFICATION.md  INSTALL.md  LICENSE  PLATFORMIO.md  QUICKSTART.md  README.md  TROUBLESHOOTING.md  USAGE.md  check_installation.sh  library.json  library.properties  test_compile_quick.cpp  test_include.cpp  test_main_header.cpp  test_math_features.cpp  units_core.h  units_estimation.h  units_math.h  units_robotics.h
RobotLib-standalone/: .gitignore  CHANGELOG.md  CONTRIBUTING.md  DISCLAIMER.md  LICENSE  README.md  compile_flags.txt  library.json  library.properties
RobotLib-standalone/docs/: REGISTRY_SUBMISSION.md
RobotLib-standalone/examples/: .gitignore  ex02  ex03  ex04  ex05  ex07  ex09  ex10  fluent_demo  hello  mpc_test  omni_robot  quadcopter
RobotLib-standalone/include/: robotlib_api.h  units_estimation.h  units_robotics.h  (+3 more)
RobotLib/simulation/: 02_pid_navigation.cpp  03_line_follower.cpp  CMakeLists.txt
STM32F103C8T6-BluePill-Basic-Projects/: .project
temp/: AdvancedObstacleAvoidance.java  EnhancedObstacleAvoidance.java  ObstacleAvoidance.java  README.md  REEFSCAPE_USAGE_GUIDE.md  ReefscapeSimulation.java  ReefscapeSwerveSubsystem.java  SIMULATION_GUIDE.md  YAMS_INTEGRATION_EXAMPLE.java
(+198 files in other folders)
